--- a/src/global.css
+++ b/src/global.css
@@ -32,10 +32,12 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 * {
   font-family: "Bitter", serif;
+  color: var(--primary-color);
+  box-sizing: border-box;
 }
 
 .text-highlight {
-  cursor: default;
+  cursor: pointer;
 }
 .text-highlight.hover:hover {
   background-size: auto auto;
@@ -77,67 +79,67 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 88px solid #fff;
+  border-right: 116px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 4%;
-  left: 42%;
+  top: 51%;
+  left: 78%;
   opacity: 0;
-  animation: shooting 14s linear infinite;
-  animation-delay: 8s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 1s;
 }
 .meteors .meteor:nth-child(2) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 97px solid #fff;
+  border-right: 169px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 79%;
+  top: 78%;
   left: 45%;
   opacity: 0;
-  animation: shooting 12s linear infinite;
-  animation-delay: 9s;
+  animation: shooting 7s linear infinite;
+  animation-delay: 12s;
 }
 .meteors .meteor:nth-child(3) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 168px solid #fff;
+  border-right: 194px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 26%;
-  left: 69%;
+  top: 10%;
+  left: 42%;
   opacity: 0;
-  animation: shooting 12s linear infinite;
-  animation-delay: 7s;
+  animation: shooting 10s linear infinite;
+  animation-delay: 11s;
 }
 .meteors .meteor:nth-child(4) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 98px solid #fff;
+  border-right: 188px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 35%;
-  left: 44%;
+  top: 62%;
+  left: 70%;
   opacity: 0;
-  animation: shooting 14s linear infinite;
+  animation: shooting 7s linear infinite;
   animation-delay: 6s;
 }
 .meteors .meteor:nth-child(5) {
@@ -145,136 +147,136 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 179px solid #fff;
+  border-right: 110px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 75%;
-  left: 59%;
+  top: 14%;
+  left: 90%;
   opacity: 0;
-  animation: shooting 12s linear infinite;
-  animation-delay: 1s;
+  animation: shooting 9s linear infinite;
+  animation-delay: 3s;
 }
 .meteors .meteor:nth-child(6) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 120px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 13%;
-  left: 57%;
-  opacity: 0;
-  animation: shooting 13s linear infinite;
-  animation-delay: 9s;
-}
-.meteors .meteor:nth-child(7) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 128px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 71%;
-  left: 59%;
-  opacity: 0;
-  animation: shooting 8s linear infinite;
-  animation-delay: 12s;
-}
-.meteors .meteor:nth-child(8) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 127px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 23%;
-  left: 98%;
-  opacity: 0;
-  animation: shooting 9s linear infinite;
-  animation-delay: 12s;
-}
-.meteors .meteor:nth-child(9) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 126px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 62%;
-  left: 65%;
-  opacity: 0;
-  animation: shooting 14s linear infinite;
-  animation-delay: 5s;
-}
-.meteors .meteor:nth-child(10) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 131px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 29%;
-  left: 54%;
-  opacity: 0;
-  animation: shooting 8s linear infinite;
-  animation-delay: 11s;
-}
-.meteors .meteor:nth-child(11) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 130px solid #fff;
-  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-  border-radius: 0 2px 2px 0;
-  transform: rotate(30deg);
-  position: absolute;
-  top: 23%;
-  left: 56%;
-  opacity: 0;
-  animation: shooting 9s linear infinite;
-  animation-delay: 11s;
-}
-.meteors .meteor:nth-child(12) {
-  width: 0;
-  height: 0;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  border-right: 182px solid #fff;
+  border-right: 164px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
   top: 50%;
-  left: 44%;
+  left: 97%;
   opacity: 0;
-  animation: shooting 9s linear infinite;
+  animation: shooting 14s linear infinite;
   animation-delay: 12s;
+}
+.meteors .meteor:nth-child(7) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 104px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 47%;
+  left: 63%;
+  opacity: 0;
+  animation: shooting 13s linear infinite;
+  animation-delay: 8s;
+}
+.meteors .meteor:nth-child(8) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 142px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 43%;
+  left: 41%;
+  opacity: 0;
+  animation: shooting 7s linear infinite;
+  animation-delay: 9s;
+}
+.meteors .meteor:nth-child(9) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 84px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 18%;
+  left: 46%;
+  opacity: 0;
+  animation: shooting 10s linear infinite;
+  animation-delay: 7s;
+}
+.meteors .meteor:nth-child(10) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 95px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 43%;
+  left: 51%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 4s;
+}
+.meteors .meteor:nth-child(11) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 137px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 76%;
+  left: 99%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 4s;
+}
+.meteors .meteor:nth-child(12) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 113px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 20%;
+  left: 87%;
+  opacity: 0;
+  animation: shooting 8s linear infinite;
+  animation-delay: 10s;
 }
 
 @keyframes shooting {
