--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -115,11 +115,11 @@
               </div>
             </div>
             <div class="links">
-              <a href="#" class="link text-highlight hover" target="_blank">
+              <a href="#" class="link" target="_blank">
                 <i class="fa-solid fa-paperclip"></i>
                 <span>OmniPay</span></a
               >
-              <a href="#" class="link text-highlight hover" target="_blank">
+              <a href="#" class="link" target="_blank">
                 <i class="fa-solid fa-paperclip"></i>
                 <span>Binpo</span></a
               >
