Added Education Section, Aadjusted angular.json budget limit in production

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -92,7 +92,7 @@
       </div>
       <div class="work__list">
         <div class="header">
-          <div>
+          <div class="div">
             <span><strong>Work Experience</strong></span>
             <i class="fa-solid fa-arrow-up"></i>
           </div>
@@ -103,18 +103,26 @@
             <div class="details">
               <div class="title">
                 <a href="" target="_blank" class="">
-                  <strong>Junior Software Developer · Bastion, Inc.</strong>
+                  &nbsp;<strong
+                    >Junior Software Developer &nbsp; · &nbsp; Bastion,
+                    Inc.</strong
+                  >
                 </a>
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
               <div class="description">
+                &nbsp;
                 <span>
-                  Developed, maintained, and shipped production code for client
-                  websites.
+                  Developed and optimized web applications with ASP.NET MVC and
+                  mobile apps using Ionic Angular, focusing on functionality,
+                  responsiveness, and cross-platform compatibility. Conducted
+                  thorough testing and debugging, and maintained robust
+                  performance through ongoing updates and collaboration with
+                  cross-functional teams.
                 </span>
               </div>
             </div>
-            <div class="links">
+            <!-- <div class="links">
               <a href="#" class="link" target="_blank">
                 <i class="fa-solid fa-paperclip"></i>
                 <span>OmniPay</span></a
@@ -123,43 +131,78 @@
                 <i class="fa-solid fa-paperclip"></i>
                 <span>Binpo</span></a
               >
-            </div>
+            </div> -->
             <div class="skills">
-              <span class="skill">HTML5</span>
-              <span class="skill">CSS3</span>
+              <span class="skill">ASP.NET MVC</span>
+              <span class="skill">C#</span>
+              <span class="skill">Ionic Framework</span>
+              <span class="skill">AngularJS</span>
+              <span class="skill">SCSS</span>
+              <span class="skill">GitHub</span>
             </div>
           </div>
         </div>
         <div class="work">
-          <div class="date"><span>SEP 2023 — PRESENT</span></div>
+          <div class="date"><span>Jan 2023 — May 2023</span></div>
           <div class="body">
             <div class="details">
               <div class="title">
                 <a href="" target="_blank" class="">
-                  <strong>Junior Software Developer · Bastion, Inc.</strong>
+                  <strong
+                    >Technical Staff Intern &nbsp; · &nbsp; IP Mgmt Div.</strong
+                  >
                 </a>
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
               <div class="description">
                 <span>
-                  Developed, maintained, and shipped production code for client
-                  websites.
+                  Provide technical support, design creative layouts using Canva
+                  for diverse projects, and implement technical solutions. More
+                  over, maintained the database management system and
+                  troubleshoot/resolve database bugs.
                 </span>
               </div>
             </div>
-            <div class="links">
-              <a href="#" class="link text-highlight hover" target="_blank">
-                <i class="fa-solid fa-paperclip"></i>
-                <span>OmniPay</span></a
-              >
-              <a href="#" class="link text-highlight hover" target="_blank">
-                <i class="fa-solid fa-paperclip"></i>
-                <span>Binpo</span></a
-              >
-            </div>
+            <!-- <div class="links">
+            </div> -->
             <div class="skills">
-              <span class="skill">HTML5</span>
-              <span class="skill">CSS3</span>
+              <span class="skill">PHP</span>
+              <span class="skill">MySQL</span>
+              <span class="skill">Canva</span>
+              <span class="skill">Video Editing</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="header">
+          <div class="div">
+            <span><strong>Education</strong></span>
+            <i class="fa-solid fa-arrow-up"></i>
+          </div>
+        </div>
+        <div class="work education">
+          <div class="date"><span>Aug 2019 — July 2023</span></div>
+          <div class="body">
+            <div class="details">
+              <div class="title">
+                <a href="" target="_blank" class="">
+                  <strong
+                    >BS Information Technology &nbsp; · &nbsp; Bicol
+                    University.</strong
+                  >
+                </a>
+                <i class="fa-solid fa-arrow-up"></i>
+              </div>
+              <div class="description">
+                <span>&bull;<i> Cum Laude</i></span>
+                <span>&bull;<i> Dean's List</i></span>
+              </div>
+            </div>
+            <div class="links">
+              <a href="#" class="link" target="_blank">
+                <i class="fa-solid fa-location-dot"></i>
+                <span>Legazpi City, Albay</span></a
+              >
             </div>
           </div>
         </div>
