--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -135,7 +135,7 @@ ion-content main section .item__button .fill {
 }
 ion-content main section#hero {
   position: relative;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
 }
 ion-content main section#hero .item {
   flex-direction: column;
@@ -157,11 +157,13 @@ ion-content main section#work {
   display: grid;
   grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
   width: 100%;
+  height: 100%;
+  min-height: calc(100vh - 7.25rem);
   padding-inline: 5rem;
-  min-height: 60vh;
   gap: 4rem;
   align-items: start;
   justify-items: center;
+  scroll-snap-align: end;
 }
 ion-content main section#work span {
   --font-inter: "__inter_20b187", "__inter_Fallback_20b187";
@@ -183,19 +185,19 @@ ion-content main section#work .work__list .header {
   width: auto;
   padding-inline: 1rem;
 }
-ion-content main section#work .work__list .header div {
+ion-content main section#work .work__list .header .div {
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
 }
-ion-content main section#work .work__list .header div:hover span strong {
+ion-content main section#work .work__list .header .div:hover span strong {
   color: var(--tertiary-color);
 }
-ion-content main section#work .work__list .header div:hover i {
+ion-content main section#work .work__list .header .div:hover i {
   transform: translate(0, -0.5rem);
   color: var(--tertiary-color);
 }
-ion-content main section#work .work__list .header div i {
+ion-content main section#work .work__list .header .div i {
   font-size: 0.75rem;
   margin-top: 0.25rem;
   rotate: 45deg;
@@ -268,9 +270,15 @@ ion-content main section#work .work__list .work .body .details .title i {
   rotate: 45deg;
   transition: 0.3s;
 }
+ion-content main section#work .work__list .work .body .details .description {
+  flex-direction: row;
+}
 ion-content main section#work .work__list .work .body .details .description span {
   line-height: 1.5;
   font-size: 0.875rem;
+  color: var(--secondary-color);
+}
+ion-content main section#work .work__list .work .body .details .description span i {
   color: var(--secondary-color);
 }
 ion-content main section#work .work__list .work .body .links {
@@ -303,6 +311,7 @@ ion-content main section#work .work__list .work .body .skills {
   flex-direction: row;
   gap: 1rem;
   align-items: center;
+  flex-wrap: wrap;
 }
 ion-content main section#work .work__list .work .body .skills .skill {
   font-size: 0.75rem;
@@ -312,6 +321,9 @@ ion-content main section#work .work__list .work .body .skills .skill {
   color: rgb(94, 234, 212);
   background-color: rgba(45, 212, 191, 0.1);
   border-radius: 0.75rem;
+}
+ion-content main section#work .work__list .work.education .body .details .description {
+  flex-direction: column;
 }
 
 .textflip-animate {
