--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -206,6 +206,30 @@
             </div>
           </div>
         </div>
+        <div class="work education">
+          <div class="date"><span>2017 — 2019</span></div>
+          <div class="body">
+            <div class="details">
+              <div class="title">
+                <a href="" target="_blank" class="">
+                  <strong
+                    >STEM &nbsp; · &nbsp; Ateneo de Naga University.</strong
+                  >
+                </a>
+                <i class="fa-solid fa-arrow-up"></i>
+              </div>
+              <div class="description">
+                <span>Senior High School</span>
+              </div>
+            </div>
+            <div class="links">
+              <a href="#" class="link" target="_blank">
+                <i class="fa-solid fa-location-dot"></i>
+                <span>Naga City, Camarines Sur</span></a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
