--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -216,8 +216,8 @@ ion-content {
         grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
         width: 100%;
         height: 100%;
-        min-height: calc(100vh - 7.25rem);
-        // min-height: 60vh;
+        // min-height: calc(100vh - 7.25rem);
+        min-height: calc(100vh + 7.25rem);
         padding-inline: 5rem;
         gap: 4rem;
         align-items: start;
@@ -235,7 +235,15 @@ ion-content {
         }
 
         .item {
+          position: sticky;
+          top: 7.25rem;
           gap: 3rem;
+
+          .item__header {
+            span {
+              font-size: 3rem;
+            }
+          }
 
           .body {
             gap: 1rem;
@@ -298,25 +306,27 @@ ion-content {
             transition: 0.3s;
             cursor: pointer;
 
-            &:hover {
-              background-color: rgba(30, 41, 59, 0.5);
+            &:not(:has(.links .link:hover)) {
+              &:hover {
+                background-color: rgba(30, 41, 59, 0.5);
 
-              .body {
-                .details {
-                  .title {
-                    a {
-                      background-size: 200% auto;
-                      color: var(--primary-color);
-                      background-clip: text;
-                      -webkit-background-clip: text;
-                      -webkit-text-fill-color: transparent;
-                      animation: textclip 1s linear infinite;
-                      background-image: var(--linear-gradient-animate);
-                    }
+                .body {
+                  .details {
+                    .title {
+                      a {
+                        background-size: 200% auto;
+                        color: var(--primary-color);
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        animation: textclip 1s linear infinite;
+                        background-image: var(--linear-gradient-animate);
+                      }
 
-                    i {
-                      transform: translate(0, -0.5rem);
-                      color: var(--tertiary-color);
+                      i {
+                        transform: translate(0, -0.5rem);
+                        color: var(--tertiary-color);
+                      }
                     }
                   }
                 }
